Infrastructure/templates/nexus/nexus-dc.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  generation: 6
  labels:
    app: nexus3
  name: nexus3
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: nexus3
    deploymentconfig: nexus3
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Recreate
  template:
    metadata:
      labels:
        app: nexus3
        deploymentconfig: nexus3
    spec:
      containers:
        - image: >-
            sonatype/nexus3@sha256:e57d22b59b607d055f9241f1613073ec1b46c37afae30d67707072f19a87d244
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - echo
                - ok
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: nexus3
          ports:
            - containerPort: 8081
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /repository/maven-public/
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 2Gi
              cpu: 700m
            requests:
              memory: 2Gi
              cpu: 400m
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus3-volume-1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: nexus3-volume-1
          persistentVolumeClaim:
            claimName: nexus-pvc
  test: false
