Infrastructure/templates/nexus/nexus-registry-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus3
  name: nexus-registry
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: nexus3
    deploymentconfig: nexus3
  sessionAffinity: None
  type: ClusterIP
