Infrastructure/templates/nexus/nexus-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus3
  name: nexus3
spec:
  ports:
    - name: 8081-tcp
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: nexus3
    deploymentconfig: nexus3
  sessionAffinity: None
  type: ClusterIP
