Infrastructure/templates/nexus/nexus-registry-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nexus3
  name: nexus-registry
spec:
  port:
    targetPort: 5000
  tls:
    termination: edge
  to:
    kind: Service
    name: nexus-registry
    weight: 100
  wildcardPolicy: None
