Infrastructure/templates/nexus/nexus-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nexus3
  name: nexus3
spec:
  port:
    targetPort: 8081-tcp
  to:
    kind: Service
    name: nexus3
    weight: 100
  wildcardPolicy: None
